added html skeleton to index file.

--- a/index.html
+++ b/index.html
@@ -1,3 +1,17 @@
 <!DOCTYPE html>
-
-
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>ToDo-Liste</title>
+  </head>
+  <body>
+    <h1>MeineToDo-Liste</h1>
+    <form id="todoForm">
+      <input type="text" id="ToDoInput" placeholder="Neuer Eintrag" />
+      <button type="submit">Hinzufügen</button>
+    </form>
+    <ul id="ToDoList"></ul>
+    <script src="ToDo.js"></script>
+  </body>
+</html>
